change folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -6601,3 +6601,39 @@ database/FoodData_Central_csv_2024-04-18/sub_sample_food.csv
 database/FoodData_Central_csv_2024-04-18/sub_sample_result.csv
 database/FoodData_Central_csv_2024-04-18/survey_fndds_food.csv
 database/FoodData_Central_csv_2024-04-18/wweia_food_category.csv
+database/FoodData_Central_2024-04-18/acquisition_samples.csv
+database/FoodData_Central_2024-04-18/agricultural_samples.csv
+database/FoodData_Central_2024-04-18/branded_food.csv
+database/FoodData_Central_2024-04-18/Download API Field Descriptions.xlsx
+database/FoodData_Central_2024-04-18/fndds_derivation.csv
+database/FoodData_Central_2024-04-18/fndds_ingredient_nutrient_value.csv
+database/FoodData_Central_2024-04-18/food_attribute_type.csv
+database/FoodData_Central_2024-04-18/food_attribute.csv
+database/FoodData_Central_2024-04-18/food_calorie_conversion_factor.csv
+database/FoodData_Central_2024-04-18/food_category.csv
+database/FoodData_Central_2024-04-18/food_component.csv
+database/FoodData_Central_2024-04-18/food_nutrient_conversion_factor.csv
+database/FoodData_Central_2024-04-18/food_nutrient_derivation.csv
+database/FoodData_Central_2024-04-18/food_nutrient_source.csv
+database/FoodData_Central_2024-04-18/food_nutrient.csv
+database/FoodData_Central_2024-04-18/food_portion.csv
+database/FoodData_Central_2024-04-18/food_protein_conversion_factor.csv
+database/FoodData_Central_2024-04-18/food_update_log_entry.csv
+database/FoodData_Central_2024-04-18/food.csv
+database/FoodData_Central_2024-04-18/foundation_food.csv
+database/FoodData_Central_2024-04-18/input_food.csv
+database/FoodData_Central_2024-04-18/lab_method_code.csv
+database/FoodData_Central_2024-04-18/lab_method_nutrient.csv
+database/FoodData_Central_2024-04-18/lab_method.csv
+database/FoodData_Central_2024-04-18/market_acquisition.csv
+database/FoodData_Central_2024-04-18/measure_unit.csv
+database/FoodData_Central_2024-04-18/microbe.csv
+database/FoodData_Central_2024-04-18/nutrient_incoming_name.csv
+database/FoodData_Central_2024-04-18/nutrient.csv
+database/FoodData_Central_2024-04-18/retention_factor.csv
+database/FoodData_Central_2024-04-18/sample_food.csv
+database/FoodData_Central_2024-04-18/sr_legacy_food.csv
+database/FoodData_Central_2024-04-18/sub_sample_food.csv
+database/FoodData_Central_2024-04-18/sub_sample_result.csv
+database/FoodData_Central_2024-04-18/survey_fndds_food.csv
+database/FoodData_Central_2024-04-18/wweia_food_category.csv
