--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,5 @@ fdc-database/FoodData_Central_csv_2024-04-18/sub_sample_food.csv
 fdc-database/FoodData_Central_csv_2024-04-18/sub_sample_result.csv
 fdc-database/FoodData_Central_csv_2024-04-18/survey_fndds_food.csv
 fdc-database/FoodData_Central_csv_2024-04-18/wweia_food_category.csv
+website/__pycache__/auth.cpython-311.pyc
+website/__pycache__/views.cpython-311.pyc
